--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^18.3.1",
     "react-i18next": "^14.1.2",
     "react-router-dom": "^6.24.1",
+    "react-toastify": "^10.0.6",
     "zustand": "^4.5.4"
   },
   "devDependencies": {
